<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <!-- Main content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/home_swipe_refresh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/graph_llc"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_weight="0.5"
                        app:cardCornerRadius="@dimen/dimen_8">


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <FrameLayout
                                android:id="@+id/select_period_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:layout_gravity="center_vertical"
                                android:padding="15dp">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/vehicle_parked"
                                    android:textColor="@color/recent_transaction"
                                    android:textStyle="bold" />


                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tv_select_period_barchart_1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:visibility="gone"
                                    android:background="@drawable/select_period_bg"
                                    android:drawableRight="@drawable/ic_dropdown"
                                    android:paddingStart="8dp"
                                    android:paddingTop="@dimen/dimen_4"
                                    android:paddingEnd="8dp"
                                    android:text="@string/select_period"
                                    android:textColor="@color/black" />

                            </FrameLayout>


                            <LinearLayout
                                android:id="@+id/admin_dashboard"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                >
                                <TextView
                                    android:id="@+id/tv_total_vehicle_scan"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:textSize="@dimen/dimen_16"
                                    android:padding="@dimen/dimen_10"
                                    android:text="TOTAL VEHICLE SCAN"
                                    android:textColor="@color/recent_transaction"
                                    android:textStyle="bold"
                                    />
                                <TextView
                                    android:id="@+id/tv_total_vehicle_scan_value"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/dimen_10"
                                    android:layout_gravity="center"
                                    android:text="0"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/dimen_16"
                                    android:textColor="@color/recent_transaction"

                                    />
                            </LinearLayout>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <ProgressBar
                            android:id="@+id/barProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:progressTint="@color/blue"
                            android:visibility="gone" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/dimen_8">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">


                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:padding="15dp">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/recent_transaction"
                                    android:textColor="@color/recent_transaction"
                                    android:textStyle="bold" />


                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tv_select_period_2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:visibility="gone"
                                    android:background="@drawable/select_period_bg"
                                    android:drawableRight="@drawable/ic_dropdown"
                                    android:paddingStart="8dp"
                                    android:paddingTop="@dimen/dimen_4"
                                    android:paddingEnd="8dp"
                                    android:text="Select Period"
                                    android:textColor="@color/black" />

                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/table_bg">

                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">


                                    <include
                                        android:id="@+id/table_first_item"
                                        layout="@layout/table_item_first"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content" />


                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/dashboard_table"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        tools:listitem="@layout/row_layout" />


                                </androidx.appcompat.widget.LinearLayoutCompat>

                            </FrameLayout>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <ProgressBar
                            android:id="@+id/tableProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:progressTint="@color/blue"
                            android:visibility="gone" />

                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
