<?xml version="1.0" encoding="utf-8"?>



<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/tvVersion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:singleLine="true"

            android:text="@string/version_1_0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:visibility="visible"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view_2"
            />
        <View
            android:id="@+id/view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_1"
            />
        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="@dimen/dimen_10"
            android:adjustViewBounds="true"
            android:src="@drawable/mahindra_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <ScrollView
            android:id="@+id/scrollLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="@dimen/card_elevation"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/dimen_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clCenterLogin"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/dimen_10"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tllUsername"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            app:boxStrokeColor="@color/secondaryDarkColor"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            app:boxCornerRadiusTopStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/dimen_10"
                                android:drawableStart="@drawable/ic_user"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                android:textSize="14sp"
                                android:hint="@string/username"
                                android:inputType="text"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <!-- <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/edUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="30dp"
                             android:layout_marginRight="20dp"
                             android:background="@drawable/rounded_edittext"
                             android:drawableStart="@drawable/ic_user"
                             android:drawablePadding="15dp"
                             android:drawableTint="@color/black"
                             android:hint="@string/username"
                             android:imeOptions="actionNext"
                             android:inputType="text"
                             android:paddingStart="25dp"
                             android:paddingTop="15dp"
                             android:paddingEnd="20dp"
                             android:paddingBottom="15dp"
                             android:textColor="@color/black"
                             android:textColorHint="@color/black"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />-->

                        <!--          <com.google.android.material.textfield.TextInputEditText
                                      android:id="@+id/edPass"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:layout_marginLeft="20dp"
                                      android:layout_marginTop="20dp"
                                      android:layout_marginRight="20dp"
                                      android:background="@drawable/rounded_edittext"
                                      android:drawableStart="@drawable/ic_pass"
                                      android:drawablePadding="15dp"
                                      android:drawableTint="@color/black"
                                      android:hint="@string/password"
                                      android:imeOptions="actionDone"
                                      android:inputType="text"
                                      android:paddingStart="25dp"
                                      android:paddingTop="15dp"
                                      android:paddingEnd="20dp"
                                      android:paddingBottom="15dp"
                                      android:textColor="@color/black"
                                      android:textColorHint="@color/black"
                                      android:textSize="16sp"
                                      app:layout_constraintEnd_toEndOf="parent"
                                      app:layout_constraintStart_toStartOf="parent"
                                      app:layout_constraintTop_toBottomOf="@+id/tllUsername" />
                  -->


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/tllPass"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            app:boxStrokeColor="@color/secondaryDarkColor"
                            app:passwordToggleEnabled="true"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            app:boxCornerRadiusTopStart="10dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusBottomEnd="@dimen/dimen_10"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tllUsername">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_pass"
                                android:textColor="@color/black"
                                android:drawablePadding="@dimen/dimen_10"
                                android:textColorHint="@color/black"
                                android:textSize="14sp"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:padding="10dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/tvForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:visibility="gone"
                            android:text="Forgot Password ?"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/dimen_14"
                            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                            app:layout_constraintTop_toBottomOf="@+id/tllPass"
                            app:layout_constraintEnd_toEndOf="parent"

                            />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="30dp"
                            android:layout_marginStart="@dimen/dimen_20"
                            android:layout_marginEnd="@dimen/dimen_20"
                            android:background="@drawable/round_corners_30dp"
                            android:text="LOGIN"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintVertical_chainStyle="packed"
                            app:cornerRadius="25dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                            app:layout_constraintBottom_toTopOf="@+id/ivKemarDealerLogo"/>
                        <ImageView
                            android:id="@+id/ivKemarDealerLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:scaleType="fitXY"
                            app:layout_goneMarginEnd="30dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:padding="@dimen/dimen_10"
                            app:layout_constraintVertical_chainStyle="packed"
                            android:adjustViewBounds="true"
                            android:src="@drawable/dealer_logo"
                            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"

                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

            <TextView
                android:id="@+id/tvDeviceId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/clBottomt"
                />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottomt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/powered_by_splash_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

